# rocket-v0.5-stable

./: .env  .gitignore  Cargo.toml  README.MD  manipulate.sqlite  meu_banco.db  migrate.bat  rocket.toml
migrations/: 1_create_initial_tables.sql  2_create_other_tables.sql
sql/: insert produto.sql
src/: auth.rs  db.rs  main.rs  mate.rs  prod.rs  reg.rs  template.rs
