[package]
name = "consumo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
rocket = { version = "0.5.0", features = ["json", "secrets"] }
serde = { version = "1.0.192", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1", features = ["full"] }

[dependencies.rocket_db_pools]
version = "0.1"
features = ["sqlx_sqlite"]
   
